--- a/nextjs-page/src/components/componentCard/componentCard.module.css
+++ b/nextjs-page/src/components/componentCard/componentCard.module.css
@@ -1,19 +1,15 @@
 .container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     margin-bottom: 20px;
-    justify-content: center;
-}
-
-.top {
-    display: flex;
 }
 
 .imgContainer {
-    width: 90%;
-    height: 400px;
+    width: 60%;
+    height: 300px;
     position: relative;
+    border: 1px solid black;
+    border-radius: 8px;
 }
 
 .img {
@@ -23,7 +19,8 @@
 .title {
     width: 90%;
     font-size: 24px;
-    margin-bottom: 20px;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .price {
