--- a/nextjs-page/src/components/searchBar/searchBar.module.css
+++ b/nextjs-page/src/components/searchBar/searchBar.module.css
@@ -4,6 +4,9 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     overflow: hidden;
+    position: relative;
+    width: 100%;
+    margin: auto;
 }
 
 .searchInput {
@@ -16,4 +19,11 @@
 .searchButton {
     padding: 8px 16px;
     border: none;
+}
+
+
+@media screen and (max-width: 768px) {
+    .searchForm {
+        margin: 10px;
+    }
 }
